# alex_tutorials

./: .gitignore  README.md
cplusplus/1helloworld/: CMakeLists.txt
jupyternotebook/: jupyternotebook_basic.ipynb
matplotlib/: matplotlib_basic.ipynb
numpy/: file_operation.ipynb  numpy_basic.ipynb
numpy/.ipynb_checkpoints/: numpy_basic-checkpoint.ipynb
opencv/: test_font.py
pandas/: pandas.ipynb
pyqt5/video_Tech With Tim/: untitled.py  untitled.ui
pyqt5/zetcode/: test1-1_window.py  test1-2.py  test1-3.py  test1-4.py  test1-5.py  test1-6.py  test1_multiwindow.py  test2-1_layout.py  test2-2.py  test2-3.py  test2-4.py  test3-1_menubar.py  test3-2.py  test3-3.py  test3-4.py  test3-5_toolbar.py  test3-6_menubar.py  test4_customedwidget.py  test5-1_signalslots.py  test5-2.py  test5-3.py  test5-4.py  test6-1_checkbox.py  test6-2_togglebutton.py  test6-3_slider.py  test6-4_progressbar.py  test7-1_pixmap.py  test7-2_lineedit.py  test7-3_splitter.py  test7-4_combobox.py  test8-1_dragdrop.py  test8-2.py  test9-1_painter.py  test9-2_drawpoints.py  test9-3_QColor.py
python/: Book_Programming Python.ipynb  Untitled.ipynb  book_fluquent_python.ipynb  book_programming_python.ipynb  exceises.ipynb  file operation.ipynb  python_basic.ipynb  style_guide.ipynb
python/.ipynb_checkpoints/: file operation-checkpoint.ipynb
python/resources/: customer.xml
pytorch/: Untitled.ipynb  gradient.ipynb  part1_tensor.ipynb  part2_theory.ipynb  part3_layers.ipynb  pytorch_part1.ipynb  yolov3.ipynb
pytorch/.ipynb_checkpoints/: pytorch_part1-checkpoint.ipynb
(+29 files in other folders)
